2007-12-03  Alexander Larsson  <alexl@redhat.com>

        * glocalfileinfo.c:
	Handle OSX style xattrs API (#500506)

2007-12-03  Alexander Larsson  <alexl@redhat.com>

        * gfile.[ch]:
        * glocalfile.c:
	Add G_FILE_COPY_NO_FALLBACK_FOR_MOVE flag

2007-12-02  A. Walton  <awalton@svn.gnome.org>

	* gfile.c:
	* gfileattribute.c:
	Documentation accuracy fixes.

2007-12-01  Behdad Esfahbod  <behdad@gnome.org>

	* gioenumtypes.c.template: Fix typo.

2007-12-01  Matthias Clasen <mclasen@redhat.com>

	* gioenumtypes.c.template: Make threadsafe get_type() functions.

2007-12-01  Matthias Clasen <mclasen@redhat.com>

	* gdirectorymonitor.c:
	* gfilemonitor.c: Add properties

	* gbufferedoutputstream.c: Don't mark buffer-size property 
	as construct-only.

2007-12-01  Matthias Clasen <mclasen@redhat.com>

	* gbufferedoutputstream.c: Add auto-grow property.

2007-11-30  Matthias Clasen <mclasen@redhat.com>

	* *.c: Unify the capitalization of section headings.

2007-11-30  Matthias Clasen <mclasen@redhat.com>

	* gmountoperation.c: Add properties
	
	* gdatainputstream.c: Turn byte-order and newline-type into
	properties.

2007-11-30  Matthias Clasen <mclasen@redhat.com>

	* gioenumtypes.[hc].template: Templates for enum registration

	* Makefile.am: Generate gioenumtypes.[hc]

	* gio.h: Include gioenumtypes.h
	* gappinfo.h:
	* gfile.h: Add some explicit nicks.

	* gio.symbols: Add new symbols

	* pltcheck.sh: Adjust

2007-11-30  Matthias Clasen <mclasen@redhat.com>

	* *.c: Explain etags and link to the explanation

2007-11-29  Matthias Clasen <mclasen@redhat.com>

	* *.c: Explain I/O priority.

	* *.c: More coding style fixes.

2007-11-29  Matthias Clasen <mclasen@redhat.com>

	* gasyncresult.c: Add another paragraph to the intro,
	adjust coding style of example.

2007-11-29  A. Walton <awalton@svn.gnome.org>

	* gappinfo.c:
	  Fixes unknown meaning in GAppLaunchContext docs.
	* gfile.c:
	  Clarify asynchronous ops.
	* gfileattribute.c:
	  Fix entity tag docs.